--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                                     <h4>Iglesia de San Marcos</h4>
                                                     <p>Es de las más bonitas, contando también con paisajes y candelabros en ella. </p>
                                                     <div class="d-flex justify-content-between flex-lg-wrap">
-                                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="text-primary"></i> Detalles</a>
+                                                        <a href="detalles-iglesia" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="text-primary"></i> Detalles</a>
                                                     </div>
                                                 </div>
                                             </div>
